--- a/index.html
+++ b/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-portfolio</title>
+    <!-- Primary Meta Tags -->
+    <title>Vatsal Gabani — Developer Portfolio</title>
+    <meta name="title" content="Vatsal Gabani — Developer Portfolio" />
+    <meta name="description" content="Full-Stack Developer skilled in React, Node.js, and modern web applications. Explore my experience, projects, and contact information." />
+
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://vatsalgabani.vercel.app/" />
+    <meta property="og:title" content="Vatsal Gabani — Developer Portfolio" />
+    <meta property="og:description" content="Full-Stack Developer specializing in React, Node.js, and real-time applications." />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://vatsalgabani.vercel.app/" />
+    <meta property="twitter:title" content="Vatsal Gabani — Developer Portfolio" />
+    <meta property="twitter:description" content="Full-Stack Developer specializing in React, Node.js, and real-time applications." />
+    <meta property="twitter:image" content="/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#09090b" />
   </head>
   <body>
     <div id="root"></div>
