--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <meta name="theme-color" content="#09090b" />
   </head>
   <body>
+    <div id="background-dots"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
